src/objects/CatereaseEventStaging__c.object
<CustomObject>
    <description>Object to hold Event data from Caterease DB.</description>
    <fields>
        <fullName>BookedBy__c</fullName>
        <label>BookedBy</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booked__c</fullName>
        <label>Booked</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EventNum__c</fullName>
        <label>EventNum</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventStaging__c</fullName>
        <externalId>true</externalId>
        <label>EventStaging</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EvtDate__c</fullName>
        <label>EvtDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EvtFrom__c</fullName>
        <label>EvtFrom</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EvtNum__c</fullName>
        <label>EvtNum</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinTotalCost__c</fullName>
        <defaultValue>0</defaultValue>
        <label>FinTotalCost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinTotalPrice__c</fullName>
        <defaultValue>0</defaultValue>
        <label>FinTotalPrice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InvalidGLCode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>InvalidGLCode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <label>Operation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartyName__c</fullName>
        <label>PartyName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProfitMismatch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Profit Mismatch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RevisedTime__c</fullName>
        <label>RevisedTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SalesRepEmail__c</fullName>
        <label>SalesRepEmail</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesRepUserEmail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Rep User Email</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CEventStagingUser</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesRep__c</fullName>
        <label>SalesRep</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceSystemId__c</fullName>
        <externalId>true</externalId>
        <label>SourceSystemId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>actguests__c</fullName>
        <label>actguests</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cost__c</fullName>
        <label>cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>final__c</fullName>
        <defaultValue>false</defaultValue>
        <label>final</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gtdguests__c</fullName>
        <label>gtdguests</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>plnguests__c</fullName>
        <label>plnguests</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>processdate__c</fullName>
        <label>process date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>processmessage__c</fullName>
        <label>process message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>processstate__c</fullName>
        <label>process state</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>profit__c</fullName>
        <label>profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rental__c</fullName>
        <defaultValue>false</defaultValue>
        <label>rental</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>total__c</fullName>
        <label>total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Caterease Event - Staging</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>EventNum__c</columns>
        <columns>EvtDate__c</columns>
        <columns>EvtFrom__c</columns>
        <columns>EvtNum__c</columns>
        <columns>FinTotalCost__c</columns>
        <columns>FinTotalPrice__c</columns>
        <columns>final__c</columns>
        <columns>ProfitMismatch__c</columns>
        <columns>InvalidGLCode__c</columns>
        <columns>total__c</columns>
        <columns>profit__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Caterease Events - Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>